--- a/css/styles.css
+++ b/css/styles.css
@@ -1319,7 +1319,7 @@ p {
 
 #section_into_soil {
    height: 200vh;
-     background-image: url("../assets/arrow-head.png");
+     background-image: url("../assets/arrow-head.webp");
    background-position: top;
    background-repeat: no-repeat;
    background-size: contain;
@@ -1369,7 +1369,7 @@ p {
    margin-top: 8%;
    height: 100%;
    width: 50vw;
-   background-image: url("../assets/arrow-blue.png");
+   background-image: url("../assets/arrow-blue.webp");
    background-position: bottom;
    background-repeat: repeat-y;
    background-size: 30%;
@@ -1408,7 +1408,7 @@ p {
 .bg-arrow {
    height: 1.25em;
    width: 100vw;
-   background-image: url("../assets/bg-arrow.png");
+   background-image: url("../assets/bg-arrow.webp");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 30%;
